# gb-tui

./: .gitignore  Cargo.toml  README.md  gbskill
assets/: WALKTHROUGH.md
assets/json/: encounters.json  moves.json
docs/: training.md
games/pokemon_red/: README.md  WALKTHROUGH.md  adapter.py  bake_past_gate.py  bake_starters.py  beat_misty.py  brock_quest.py  context.py  demo_starter.py  dialog_teacher.py  executor.py  fleet.py  gen_dialog_demos.py  gen_errand_demos.py  grind_pika.py  misty_fight.py  navigate.py  screen.py  subgoals.json  subgoals.py
journal/session-1784505837/: events.jsonl
journal/session-1784505997/: events.jsonl
pipeline/: PIPELINE.md  _bootstrap.py  adapter.py  autoplay.py  build_dataset.py  distill_v4.sh  distill_v5.sh  eval_live.py  eval_offline.py  fleet_auto.py  fleet_watchdog.py  guide_fleet.py  learn_selfplay.py  make_v2.py  make_v4.py  make_v5.py  mine_autoplay.py  mine_journals.py  play_record.py  prompts.py  reward.py  serve_shim.py  train_lora.py  walkthrough_ingest.py
run/: PLAYBOOK.md  fetch-maps.sh
src/: audio.rs  copilot.rs  emu.rs  export.rs  gamestate.rs  input.rs  journal.rs  lib.rs  main.rs  mapdata.rs  persist.rs
src/core/: gb.rs  (+1 more)
tests/: core_integration.rs
training/: .gitignore  autoplay.py  bake_past_gate.py  bake_starters.py  beat_misty.py  brock_quest.py  build_dataset.py  context.py  demo_starter.py  eval_live.py  eval_offline.py  executor.py  fleet.py  fleet_auto.py  grind_pika.py  make_ggufs.sh  make_v2.py  mine_autoplay.py  mine_journals.py  misty_fight.py  navigate.py  serve_shim.py  train_lora.py
(+73 files in other folders)
