[package]
name = "gb-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
boytacean = "0.12.1"
cpal = "0.18"
libc = "0.2.186"
png = "0.18.1"
ratatui = "0.30"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.3"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3.27.0"

[[bin]]
name = "gb-agent"
path = "src/bin/agent.rs"
